refactor: simplify nginx caching and MIME type configuration
- Removed long-term caching for static assets in favor of no-cache strategy
- Consolidated JavaScript MIME type handling into specific location block
- Streamlined gzip configuration and removed redundant asset caching rules

--- a/nginx.conf
+++ b/nginx.conf
@@ -4,42 +4,33 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
-    # Include MIME types
+    # Essential: Include default MIME types from nginx
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
-    # Explicit MIME types for JavaScript modules
-    types {
-        application/javascript js mjs;
-        text/javascript js;
-    }
-
     # Gzip compression
     gzip on;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+    gzip_vary on;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript application/x-javascript;
 
-    # SPA routing - redirect all requests to index.html
+    # SPA routing - all requests to index.html
     location / {
         try_files $uri $uri/ /index.html;
-        add_header Cache-Control "no-cache";
     }
 
-    # Cache static assets with proper MIME types
-    location ~* \.(js|mjs)$ {
+    # Ensure JS/CSS files have correct MIME type and are cacheable
+    location ~* \.(js|jsx|mjs)$ {
+        include /etc/nginx/mime.types;
+        types {
+            application/javascript js jsx mjs;
+        }
+        add_header Cache-Control "no-cache, must-revalidate";
         add_header Content-Type "application/javascript; charset=utf-8";
-        expires 1y;
-        add_header Cache-Control "public, immutable";
     }
 
     location ~* \.(css)$ {
         add_header Content-Type "text/css; charset=utf-8";
-        expires 1y;
-        add_header Cache-Control "public, immutable";
-    }
-
-    location ~* \.(png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-        expires 1y;
-        add_header Cache-Control "public, immutable";
+        add_header Cache-Control "no-cache, must-revalidate";
     }
 
     # Security headers
